--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-image-fade-in": "^1.1.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
